Changelog
=========

4.0.dev0 - (unreleased)
-----------------------

3.9 - (2016-08-03)
------------------
* Change: Include sparql-client in pypi release check
  [avoinea]

3.8 - (2015-12-07)
------------------
* Change: Added system depenedencies within setup.py
  [voineali refs #27406]

3.7 - (2015-11-23)
------------------
* Bug fix: Fixed release check on pypi
  [voineali]

3.6 - (2015-11-16)
------------------
* Change: Disable release check on plone.org
  [voineali]

3.5 - (2015-10-05)
------------------
* Bug fix: use evnetlet to prevent hanging out connection
  [lucas refs #29063]

3.4 - (2015-06-03)
------------------
* Bug fix: fixed legacy versions check
  [ghicaale refs #25722]

3.3 - (2015-06-02)
------------------
* Bug fix: fixed missing import
  [ghicaale refs #25722]

3.2 - (2015-02-03)
------------------
* Feature: Updated versioning schema to follow PEP440 versioning conventions
  [olimpiurob refs #22612]

3.1 - (2014-09-19)
------------------
* Feature: all errors reported now include the path to the repository.
  [ghicaale refs #20520]

3.0 - (2014-02-13)
------------------
* Change: go back to the behaviour introduced in egg 2.8 as 2.9 gave an error
  when attempting to add files with git
  [ichimdav]

2.9 - (2014-02-13)
------------------
* Change: better fix for commit when using get_scm since git suggests a period
  after the add command
  [ichimdav]

2.8 - (2014-02-13)
------------------
* Bug fix: fixed commit of get_scm when commiting the version bump by passing in
  the a flag
  [ichimdav]

2.7 - (2014-02-03)
------------------
* Feature: Use pypi JSON API to check if package is released on pypi
  [voineali]

2.6 - (2014-01-22)
------------------
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]
* Bug fix: Fix adding the MANIFEST.in to conform to API changes in scm.py module
  [olimpiurob]

2.5 - (2013-12-10)
------------------